Added two more themes

--- a/examples/10-change-theme.html
+++ b/examples/10-change-theme.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="../css/theme/dracula.css">
     <link rel="stylesheet" href="../css/theme/darkblue.css">
     <link rel="stylesheet" href="../css/theme/zenburn.css">
+    <link rel="stylesheet" href="../css/theme/pinklady.css">
+    <link rel="stylesheet" href="../css/theme/somebook.css">
 
     <!--[if lt IE 9]>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv-printshiv.min.js"></script>
