--- a/examples/inc/menu-template-theme.html
+++ b/examples/inc/menu-template-theme.html
@@ -7,8 +7,10 @@
     <label>Choose a Theme</label>
     <select class="form-control" id="theme-selector">
         <option value="dracula" selected>Dracula</option>
+        <option value="pinklady">Pink Lady</option>
         <option value="darkblue">Dark Blue</option>
         <option value="zenburn">Zenburn</option>
+        <option value="somebook">Some Book</option>
     </select>
 </div>
 
