Added methods for remote control
Solved bug introduced with theme functionality:
active elements lost background color

--- a/examples/10-change-theme.html
+++ b/examples/10-change-theme.html
@@ -52,11 +52,11 @@
                     <pre>$(document).ready(function () {
     $('#test').BootSideMenu({
         side: 'left',
-        theme:'dracula', //darkblue or zenburn
+        theme:'dracula'
     });
 });</pre>
 
-                    <p class="lead">If you want to create a theme like this... here is the way:</p>
+                    <p class="lead">If you need to create a theme like this... here is the way:</p>
                     <p>
                         Create and embed (after the BootSideMenu.css inclusion) a css file, contains something like
                         this:</p>
@@ -107,8 +107,11 @@
 }
                     </pre>
                     <p>After that, use your 'customtheme' name into <code>theme:</code> option.</p>
-                    <p class="lead">If you want to share your creation, feel free to send me your css file.</p>
-                    <p>That's all for now. <a href="../index.html">Go back</a>!</p>
+                    <div class="alert alert-success">
+                        If you want to share your creation, feel free to send me your theme.
+                    </div>
+                    <p>In the <a href="11-remote-control.html">next example</a> you can see how to control the menu
+                        remotely.</p>
 
                 </div>
             </div>
