Forget to update the examples list

--- a/examples/inc/example-list.html
+++ b/examples/inc/example-list.html
@@ -11,5 +11,6 @@
         <a href="8-simple-left-with-select.html" class="list-group-item">Basic With Selectbox</a>
         <a href="9-change-arrows-font.html" class="list-group-item">Change icon font</a>
         <a href="10-change-theme.html" class="list-group-item">Change Theme Color</a>
+        <a href="11-remote-control.html" class="list-group-item">Remote Control</a>
     </div>
 </div>
