--- a/inc/example-list.html
+++ b/inc/example-list.html
@@ -16,5 +16,6 @@
         <a href="examples/8-simple-left-with-select.html" class="list-group-item">Basic With Selectbox</a>
         <a href="examples/9-change-arrows-font.html" class="list-group-item">Change icon font</a>
         <a href="examples/10-change-theme.html" class="list-group-item">Change Theme Color</a>
+        <a href="examples/11-remote-control.html" class="list-group-item">Remote Control</a>
     </div>
 </div>
