--- a/examples/11-remote-control.html
+++ b/examples/11-remote-control.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Remote Control</title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../css/BootSideMenu.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="../css/BootSideMenu.css" />
 
     <!--[if lt IE 9]>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv-printshiv.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+      <script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv-printshiv.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
     <style type="text/css">
@@ -23,104 +24,137 @@
         }
     </style>
 </head>
+
 <body>
+    <div class="container">
+        <!-- Static navbar -->
+        <nav class="navbar navbar-default" w3-include-html="inc/navbar.html"></nav>
+        <!-- /Static navbar -->
 
+        <!-- Jumbotron -->
+        <div class="jumbotron" w3-include-html="inc/jumbotron.html"></div>
+        <!-- /Jumbotron -->
 
-<div class="container">
+        <!--Example content-->
 
-    <!-- Static navbar -->
-    <nav class="navbar navbar-default" w3-include-html="inc/navbar.html"></nav>
-    <!-- /Static navbar -->
-
-    <!-- Jumbotron -->
-    <div class="jumbotron" w3-include-html="inc/jumbotron.html"></div>
-    <!-- /Jumbotron -->
-
-    <!--Example content-->
-
-    <div class="row">
-        <div class="col-md-8">
-            <div class="panel panel-default">
-                <div class="panel-heading"><span class="fa fa-jsfiddle"></span> How to</div>
-                <div class="panel-body">
-                    <p class="lead">The menu is on the left and you can control it using these buttons.</p>
-                    <p>
-                        <button type="button" class="btn btn-sm btn-primary" id="btnOpen">Open</button>&nbsp;&nbsp;
-                        <button type="button" class="btn btn-sm btn-primary" id="btnClose">Close</button>&nbsp;&nbsp;
-                        <button type="button" class="btn btn-sm btn-primary" id="btnToggle">Toggle</button>
-                    </p>
-                    <pre>$(document).ready(function () {
+        <div class="row">
+            <div class="col-md-8">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <span class="fa fa-jsfiddle"></span> How to
+                    </div>
+                    <div class="panel-body">
+                        <p class="lead">
+                            The menu is on the left and you can control it using these buttons.
+                        </p>
+                        <p>
+                            <button type="button" class="btn btn-sm btn-primary" id="btnOpen">
+                  Open</button
+                >&nbsp;&nbsp;
+                <button
+                  type="button"
+                  class="btn btn-sm btn-primary"
+                  id="btnClose"
+                >
+                  Close</button
+                >&nbsp;&nbsp;
+                <button
+                  type="button"
+                  class="btn btn-sm btn-primary"
+                  id="btnToggle"
+                >
+                  Toggle
+                </button>
+                        </p>
+                        <pre>
+$(document).ready(function () {
         $('#test').BootSideMenu({
             side: "left",
             closeOnClick: false
         });
 
         $('#btnOpen').click(function () {
-            $('#test').BootSideMenu.open();
+           $("#test").data("BootSideMenu").open();
         });
 
         $('#btnClose').click(function () {
-            $('#test').BootSideMenu.close();
+           $("#test").data("BootSideMenu").close();
         });
 
         $('#btnToggle').click(function () {
-            $('#test').BootSideMenu.toggle();
+           $("#test").data("BootSideMenu").toggle();
         });
-});</pre>
-                    <p>Hope this will help <strong><a
-                            href="https://github.com/AndreaLombardo/BootSideMenu/issues/24" target="_blank">Rapid0s</a></strong>
-                        and
-                        <strong><a href="https://github.com/AndreaLombardo/BootSideMenu/issues/9"
-                                   target="_blank">harrisdavidharris</a></strong></p>
-                    <p>That's all for now. <a href="../index.html">Go back</a>!</p>
-                </div>
+});</pre
+              >
+              <p>
+                Hope this will help
+                <strong
+                  ><a
+                    href="https://github.com/AndreaLombardo/BootSideMenu/issues/24"
+                    target="_blank"
+                    >Rapid0s</a
+                  ></strong
+                >
+                and
+                <strong
+                  ><a
+                    href="https://github.com/AndreaLombardo/BootSideMenu/issues/9"
+                    target="_blank"
+                    >harrisdavidharris</a
+                  ></strong
+                >
+              </p>
+              <p>That's all for now. <a href="../index.html">Go back</a>!</p>
             </div>
+          </div>
         </div>
 
         <!--Right col-->
         <div class="col-md-4">
-            <div w3-include-html="inc/right-content.html"></div>
-            <div w3-include-html="inc/example-list.html"></div>
+          <div w3-include-html="inc/right-content.html"></div>
+          <div w3-include-html="inc/example-list.html"></div>
         </div>
         <!--/Right col-->
-
+      </div>
     </div>
-</div>
 
-<!--Test -->
-<div id="test" w3-include-html="inc/menu-template.html"></div>
-<!--/Test -->
+    <!--Test -->
+    <div id="test" w3-include-html="inc/menu-template.html"></div>
+    <!--/Test -->
 
-<script src="https://www.w3schools.com/lib/w3.js"></script>
-<script src="https://code.jquery.com/jquery-2.2.4.min.js"
-        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://www.w3schools.com/lib/w3.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-2.2.4.min.js"
+      integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-<script src="../js/BootSideMenu.js"></script>
+    <script src="../js/BootSideMenu.js"></script>
 
-<script type="text/javascript">
-    $(document).ready(function () {
+    <script type="text/javascript">
+      $(document).ready(function () {
         w3.includeHTML(init);
-    });
+      });
 
-    function init() {
-        $('#test').BootSideMenu({
-            side: "left",
-            closeOnClick: false
+      function init() {
+        $("#test").BootSideMenu({
+          side: "left",
+          closeOnClick: false
         });
 
-
-        $('#btnOpen').click(function () {
-            $('#test').BootSideMenu.open();
+        $("#btnOpen").click(function () {
+          $("#test").data("BootSideMenu").open();
         });
 
-        $('#btnClose').click(function () {
-            $('#test').BootSideMenu.close();
+        $("#btnClose").click(function () {
+          $("#test").data("BootSideMenu").close();
         });
 
-        $('#btnToggle').click(function () {
-            $('#test').BootSideMenu.toggle();
+        $("#btnToggle").click(function () {
+          $("#test").data("BootSideMenu").toggle();
         });
-    }
-</script>
-</body>
+      }
+    </script>
+  </body>
+</html>
